more fleshed out skeleton of a multi page website. a few empty files were created including our form.php file to query the database when our (not yet created) submit button is clicked, an hours.html page which will open in a new tab, a contact us page (message.html) and a email form page (mailer.html)

--- a/index.html
+++ b/index.html
@@ -2,14 +2,35 @@
 
 <html>
     <head>
+        <meta name="author" content="Kader Arnold">
+        <meta name="viewport" content="display=device-width">
+        <meta charset="UTF-8">
+        <meta lang="en-us">
+        <title>1701</title>
     </head>
     <body>
         <div class="wrapper">
             <header>
+                <h1>1701 Seafood & Steaks</h1>
+                <h3><a type="tel" href="+1 (610) 704-5888">Call</a></h3>
+                <h3><a href="hours.html" target="_blank">Hours</a></h3>
+                <hr>
             </header>
+
             <div class="form-container">
+                <form action="form.php" method="POST" onsubmit="alert('poopjk');">
+                    
+                </form>
             </div>
+
             <footer>
+                <ul>
+                    <nav>
+                        <li><a href="pdr.html">Private Dining</a></li>
+                        <li><a href="message.html">Message Us</a></li>
+                        <li><a href="mailer.html">Subscribe To Our Email List</a></li>
+                    </nav>
+                </ul>
             </footer>
         </div>
     </body>
