added a styles.css stylesheet and linked it to index.html. still have to learn more about how we can use the viewport metadata to resize the viewand I will have to go back later to write in the full metadata in the <head> element. I also cant forget that were going to have to hard code all the values in for our <select> <option> menus (party size and reservation times), and a small javascript import or embed to write the date in MM-DD-YYYY format in a <input>'s value attribute within our form. Also wouldnt hurt to @font-face/ import an adobe font and to experiment with that

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="display=device-width">
         <meta charset="UTF-8">
         <meta lang="en-us">
+        <link href="styles.css" rel="stylesheet" type="text/css">
         <title>1701</title>
     </head>
     <body>
