fixed the call button by prepending 'tel:' to the href'd phone number

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="wrapper">
             <header>
                 <h1>1701 Seafood & Steaks</h1>
-                <h3><a type="tel" href="+1 (610) 704-5888">Call</a></h3>
+                <h3><a href="tel:+1 (610) 704-5888">Call</a></h3>
                 <h3><a href="hours.html" target="_blank">Hours</a></h3>
             </header>
             <div class="form-container">
