styled the form so that the textarea, <select> <option> menus, and text input fields would float to the right, and the text is left-aligned by default. added two <br>'s before the submit button because it was coming up too high and looked bad. I think I should shrink down the main div (class='wrapper', not container this time) maybe 40-80 pixels because the text fields are too far away from the words. still have to implement the hours popup pane, email list form page, the pdr page, and the contact us message form.

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
                             <option class="time">10:45</option>
                         </select>
                         <hr>
-                        Dietary Restrictions,<br> Special Occasions,<br> Requests...<br>
-                        <textarea cols="20" rows="5">
-                        </textarea>
-                        <hr>
+                        Dietary Restrictions,Special Occasions, Requests...
+                        <textarea cols="20" rows="5"></textarea>
+                        <br>
+                        <br>
                         <input type="submit" value="submit" id="submit">
                     </fieldset>
                 </form>
