changed the date field's type from date to text because the cross compatability is weird in between chrome and safari on catalina (and im sure other macOS versions offer similar difficulties in correspondence with the newest (least old) Chrom legacy instance's interpretation of the HTML5 standard. So were gonna just make 200% SURE that the form looks the same (pretty much/as close as possible, or at a bare minimum having it look good but distinguished on either browser). In sum, we 're going to have to use the js Date() instance named time in fill.js to populate the plain old text <input> field and then make sure that it updates on close.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <hr>
                         Tel:  <input type="tel" minlength="10" maxlength="16" required>
                         <hr>
-                        Date: <input type="date" required>
+                        Date: <input type="text" required>
                         <hr>
                         Party Size: 
                         <select class="partySize">
