--- a/index.html
+++ b/index.html
@@ -71,11 +71,12 @@
                             <option class="time">10:45</option>
                         </select>
                         <hr>
-                        Dietary Restrictions, Special Occasions, Requests...
+                        Dietary Restrictions,<br> Special Occasions,<br> Requests...
                         <textarea cols="20" rows="5"></textarea>
-                        <br>
-                        <br>
+                        <br><br>
                         <input type="submit" value="submit" id="submit">
+                        <br>
+                        <br>
                     </fieldset>
                 </form>
                 <hr>
