--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
                             <option class="time">10:45</option>
                         </select>
                         <hr>
-                        Dietary Restrictions,<br> Special Occasions,<br> Requests...
-                        <textarea cols="20" rows="5"></textarea>
+                        <p> Dietary Restrictions,<br> Special Occasions,<br> Requests...</p>
+                        <br>
+                        <textarea cols="18" rows="7"></textarea>
                         <br><br>
                         <input type="submit" value="submit" id="submit">
                         <br>
@@ -85,9 +86,10 @@
             <footer>
                 <ul>
                     <nav>
-                        <li><a href="pdr.html">Private Dining</a></li>
+                        <li><a href="pdr.html">Private Dining Rooms</a></li>
+                        <li><a href="menu.html">Menu</a></li>
                         <li><a href="message.html">Message Us</a></li>
-                        <li><a href="mailer.html">Subscribe To Our Email List</a></li>
+                        <li><a href="mailer.html">Email List</a></li>
                     </nav>
                 </ul>
             </footer>
