added placeholder values to our index.html form. it's really starting to come to life. Next, I should probably look at some of those Adobe Fonts I had previously Mentioned, because that should have a quick and significant effect

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta charset="UTF-8">
         <meta name="author" content="Kader Arnold">
         <meta name="viewport" content="display=device-width">
-       
         <link href="styles.css" rel="stylesheet" type="text/css">
         <title>1701</title>
     </head>
@@ -21,9 +20,9 @@
                 <form action="form.php" method="POST" onsubmit="alert('poopjk');">
                     <fieldset>
                         <legend>Reservation Books</legend>
-                        Name: <input type="text" minlength="2" maxlength="20" required>
+                        Name: <input type="text" placeholder="Garth Weldon" minlength="2" maxlength="20" required>
                         <hr>
-                        Tel:  <input type="tel" minlength="10" maxlength="16" required>
+                        Tel:  <input type="tel" minlength="10" placeholder="+1(215) 251-1701"maxlength="16" required>
                         <hr>
                         Date: <input type="text" id="date" required>
                         <hr>
@@ -32,7 +31,7 @@
                             <option class="size">1</option>
                             <option class="size">2</option>
                             <option class="size">3</option>
-                            <option class="size">4</option>
+                            <option class="size" selected>4</option>
                             <option class="size">5</option>
                             <option class="size">6</option>
                             <option class="size">7</option>
