added a temporary opt variable to the fill.js script so we could figure out how to block off certain times in the 'Available Times' <select> <option> menu, turns out this isnt a GUARENTEED but im pretty confident that if we set the element.disabled = true, that we could write a more substantial .js file to achieve what we are looking for and be comfortable with its portability.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <form action="form.php" method="POST" onsubmit="alert('poopjk');">
                     <fieldset>
                         <legend>Reservation Books</legend>
-                        Name: <input type="text" placeholder="Garth Weldon" minlength="2" maxlength="20" required>
+                        Name: <input id="name" type="text" placeholder="Garth Weldon" minlength="2" maxlength="20" required>
                         <hr>
                         Tel:  <input type="tel" minlength="10" placeholder="+1(215) 251-1701"maxlength="16" required>
                         <hr>
@@ -45,7 +45,7 @@
                         Available Times: 
                         <select class="availableTimes">
                             <option class="time">5:00</option>
-                            <option class="time">5:15</option>
+                            <option id="rando" class="time">5:15</option>
                             <option class="time">5:30</option>
                             <option class="time">5:45</option>
                             <option class="time">6:00</option>
@@ -68,6 +68,7 @@
                             <option class="time">10:15</option>
                             <option class="time">10:30</option>
                             <option class="time">10:45</option>
+                            <option class="time">11:00</option>
                         </select>
                         <hr>
                         <p> Dietary Restrictions,<br> Special Occasions,<br> Requests...</p>
