added a small subscript to fill.js which disables all the <option> elements with class time (which is just all of the <options> in our 'Available Times' select menu

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         Available Times: 
                         <select class="availableTimes">
                             <option class="time">5:00</option>
-                            <option id="rando" class="time">5:15</option>
+                            <option class="time">5:15</option>
                             <option class="time">5:30</option>
                             <option class="time">5:45</option>
                             <option class="time">6:00</option>
