added .sql script to collect the data from our <form> inside index.html (the reservation form)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </header>
             <div class="form-container">
                 <hr>
-                <form action="form.php" method="POST" onsubmit="alert('poopjk');">
+                <form action="form.php" method="POST">
                     <fieldset>
                         <legend>Reservation Books</legend>
                         Name: <input id="name" type="text" placeholder="Garth Weldon" minlength="2" maxlength="20" required>
@@ -29,9 +29,9 @@
                         Party Size: 
                         <select class="partySize">
                             <option class="size">1</option>
-                            <option class="size">2</option>
+                            <option class="size" selected>2</option>
                             <option class="size">3</option>
-                            <option class="size" selected>4</option>
+                            <option class="size">4</option>
                             <option class="size">5</option>
                             <option class="size">6</option>
                             <option class="size">7</option>
